--- a/public/css/skins/skin-red.css
+++ b/public/css/skins/skin-red.css
@@ -71,6 +71,7 @@
 }
 .skin-red .sidebar-menu > li > a {
   border-left: 3px solid transparent;
+  font-size: medium
 }
 .skin-red .sidebar-menu > li:hover > a,
 .skin-red .sidebar-menu > li.active > a {
