--- a/public/css/AdminLTE.css
+++ b/public/css/AdminLTE.css
@@ -2244,7 +2244,7 @@ a:focus {
   background-color: #00acd6;
 }
 .btn-danger {
-  background-color: #dd4b39;
+  background-color: rgb(194, 71, 54);;
   border-color: #d73925;
 }
 .btn-danger:hover,
