Se modifico tamaño de fuente del sidebar

--- a/public/css/skins/skin-red.css
+++ b/public/css/skins/skin-red.css
@@ -71,7 +71,7 @@
 }
 .skin-red .sidebar-menu > li > a {
   border-left: 5px solid transparent;
-  font-size: medium
+  font-size: x-large;
 }
 .skin-red .sidebar-menu > li:hover > a,
 .skin-red .sidebar-menu > li.active > a {
