--- a/public/css/jquery.loader.css
+++ b/public/css/jquery.loader.css
@@ -5,7 +5,7 @@
   left: 50%;
   margin: -20px 0 0 -20px;
   overflow: hidden;
-  position: absolute;
+  position: center;
   right: 0;
   top: 50%;
   width: 179px;
