Avances en modal gastos

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -67,9 +67,9 @@ img {
 /* The Close Button */
 .close {
     position: absolute;
-    top: 15px;
+    top: 10px;
     right: 35px;
-    color: #f1f1f1;
+    color: #373a3c;
     font-size: 40px;
     font-weight: bold;
     transition: 0.3s;
