se redondeo la deuda

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6232,5 +6232,15 @@ button.close {
     display: none !important;
   }
 }
+@media only screen and (max-width: 500px) {  
+    p {
+      font-size: 5px;
+
+    }
+    h3 {
+    font-size: 50%; 
+    }
+    
+} 
 
 /*# sourceMappingURL=bootstrap.css.map */
